tests/parser-test-files/bad-files/package.1.error
error: Malformed package declaration
  --> test:2:8
   |
 2 |  (package)
   |          ^ missing package name
