tests/parser-test-files/bad-files/package.1.coal
;; BAD: missing package name
(package)
